adding global.css changes

--- a/wp-content/themes/point-church/sass/_global.scss
+++ b/wp-content/themes/point-church/sass/_global.scss
@@ -64,7 +64,7 @@ html, body{
 	margin-top: -1em;
 }
 
-p{
+/*p{
 	line-height: 1.6em;
 	font-size: 1.2em;
 	margin-bottom: 1.6em;
@@ -92,7 +92,7 @@ h5{
 	font-weight: 800;
 	font-size: 1.4em;
 	margin: 3em 0 1em;
-}
+}*/
 
 .scripture{
 	padding: 2em;
