adding stylelinter and editorconfig

--- a/wp-content/themes/point-church/css/src/main.css
+++ b/wp-content/themes/point-church/css/src/main.css
@@ -1,8 +1,11 @@
 /* variables & settings */
+
 @import 'reset';
 @import 'variables';
 @import 'typography';
 
 /* components */
+
 @import 'components/header';
 @import 'components/footer';
+@import 'components/section';
