--- a/wp-content/themes/point-church/css/src/components/_header.css
+++ b/wp-content/themes/point-church/css/src/components/_header.css
@@ -1,42 +1,87 @@
-.site-header{
-    position: fixed;
-    top: 0;
+.site-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: $darkGray;
+  width: 100%;
+
+  .logo {
+    text-indent: -9999em;
+    background: url('../../images/point-logo-header.png') 0 0 no-repeat;
+    width: 100px;
+    height: 45px;
+    display: block;
+    margin: 1em auto;
+    background-size: 100%;
+  }
+
+  nav.on-canvas { display: none; }
+}
+
+nav.off-canvas {
+  display: block;
+  box-sizing: border-box;
+  position: fixed;
+  top: -5px;
+  left: -75vw;
+  width: 75vw;
+  background: #333;
+  height: 150%;
+  padding: 1em;
+  z-index: 9999;
+  transition: left .5s;
+
+  ul li a {
+    padding: 1em 0;
+    display: block;
+    border-bottom: 1px solid #666;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  .off-canvas-control {
+    position: absolute;
+    right: -60px;
+    width: 50px;
+    height: 50px;
+    text-indent: -9999em;
+    display: block;
+    background: #333 url('../../images/hamburger.png') no-repeat center;
+  }
+
+  &.open {
     left: 0;
-    background: $darkGray;
-
-    .logo{
-		text-indent: -9999em;
-		background: url('../../images/point-logo-header.png') 0 0 no-repeat;
-		width: 145px;
-		height: 67px;
-        display: inline-block;
-		margin: 1em 0;
-		background-size: 100%;
-    }
-
+  }
 }
 
 @mixin breakpoint900 {
-    .logo{
-        float: left;
-    }
+  .header {
+    background: inherit;
+  }
+
+  .logo {
+    float: left;
+  }
 }
 
+/*
+@mixin breakpoint1024 {
 
-what {}
+}
 
+@mixin breakpoint1200 {
 
+}
+*/
 
+/** OLD BELOW ***/
 
-
-///** OLD BELOW ***///
-
-
-.promo-active header{
+/*
+.promo-active header {
 	margin-top: 50px;
 }
 
-.promo-bar{
+.promo-bar {
 	height: 50px;
 	background: #f00000;
 	color: #000;
@@ -58,13 +103,13 @@ what {}
 	display: block;
 }
 
-a.promo-bar:hover{
+a.promo-bar:hover {
 	color: #000;
 	background: lighten(#f00000, 5%);
 
 }
 
-header{
+header {
 	position: fixed;
 	top: 0;
 	border-bottom: 1px solid rgba(255,255,255,.1);
@@ -74,7 +119,7 @@ header{
 	transition: all .5s;
 	@include clearfix;
 
-	h1{
+	h1 {
 		text-indent: -9999em;
 		background: url('../images/point-logo-header.png') 0 0 no-repeat;
 		width: 145px;
@@ -84,44 +129,42 @@ header{
 		background-size: 100%;
 	}
 
-	nav.on-canvas{
+	nav.on-canvas {
 		float: right;
 		font-family: 'myriad-pro';
 		width: 75%;
 		margin-right: 2em;
 		//padding: 1em 4em 1em 0;
 
-		.menu-global-navigation-container{
+		.menu-global-navigation-container {
 			float: right;
 		}
 
-		ul li{
+		ul li {
 			font-size: 1.2em;
 			display: inline;
 
-
-			&.current-menu-item, &.current-page-ancestor{
-				a{ color: #fff; }
+			&.current-menu-item, &.current-page-ancestor {
+				a { color: #fff; }
 			}
 
-			&.menu-item-type-custom{
-			
-				a{ 
-					border-left: 1px solid rgba(255,255,255,.1); 
-					background: url(../images/search-icon.png) no-repeat center ;
+			&.menu-item-type-custom {
+
+				a {
+					border-left: 1px solid rgba(255,255,255,.1);
+					background: url(../images/search-icon.png) no-repeat center;
 					text-indent: -9999em;
 					padding: 2.15em 3em;
-
-				}			
+				}
 			}
 
-			a{
+			a {
 				color: #ccc;
 				text-decoration: none;
 				padding: 2.15em 2em;
 				display: inline-block;
 
-				&:hover{
+				&:hover {
 					color: #fff;
 					background-color: rgba(0,0,0,.5);
 
@@ -129,40 +172,40 @@ header{
 			}
 		}
 
-		.search-link{
+		.search-link {
 			display: inline-block;
 		}
 	}
 
-	&.past-intro, &.opaque{
+	&.past-intro, &.opaque {
 		background: rgba(0,0,0,.5);
 		//border-bottom: none;
 	}
 }
 
-nav.off-canvas{ display: none; }
+nav.off-canvas { display: none; }
 
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1300px) {
 
-	header{
+	header {
 
-		h1{
+		h1 {
 			width: 120px;
 			height: 52px;
 		}
 
-		nav.on-canvas{
+		nav.on-canvas {
 			width: 85%;
 
-			ul li{
+			ul li {
 
-				&.menu-item-type-custom{
-					a{
+				&.menu-item-type-custom {
+					a {
 						padding: 1.7em 2.5em;
 					}
 				}
 
-				a{
+				a {
 					padding: 1.7em 1.5em;
 				}
 			}
@@ -170,50 +213,48 @@ nav.off-canvas{ display: none; }
 
 	}
 
-
 }
 
-@media screen and (max-width: 1024px){
-	header{
+@media screen and (max-width: 1024px) {
+	header {
 		text-align: center;
 		background: #333!important;
 		padding: 1px 0;
 		position: static;
 
-		h1{ float: none; margin: 1em auto; }
-		nav.on-canvas{
+		h1 { float: none; margin: 1em auto; }
+		nav.on-canvas {
 			float: none;
 			margin: 0 auto;
 
-			.menu-global-navigation-container{ float: none; }
+			.menu-global-navigation-container { float: none; }
 		}
 	}
 }
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
 
-	.promo-active header{
+	.promo-active header {
 		margin-top: 0;
 	}
-	
-	.promo-bar{
+
+	.promo-bar {
 		position: static;
-		padding: 1em 20vw;	
+		padding: 1em 20vw;
 		font-size: .8em;
 		height: auto;
 		line-height: 1.4em;
 	}
 
-	header{
-
-		nav.on-canvas{
+	header {
+		nav.on-canvas {
 			display: none;
 		}
 	}
-	
-	nav.off-canvas{
+
+	nav.off-canvas {
 		display: block;
-		box-sizing: border-box;
+		box-sizing: border-box; d
 		position: fixed;
 		top: -5px;
 		left: -75vw;
@@ -224,7 +265,7 @@ nav.off-canvas{ display: none; }
 		z-index: 9999;
 		transition: left .5s;
 
-		ul li a{
+		ul li a {
 			padding: 1em 0;
 			display: block;
 			border-bottom: 1px solid #666;
@@ -232,7 +273,7 @@ nav.off-canvas{ display: none; }
 			text-align: center;
 		}
 
-		.off-canvas-control{
+		.off-canvas-control {
 			position: absolute;
 			right: -60px;
 			width: 60px;
@@ -243,9 +284,9 @@ nav.off-canvas{ display: none; }
 
 		}
 
-		&.open{
+		&.open {
 			left: 0;
 		}
 
 	}
-}
+} */
