--- a/wp-content/themes/point-church/css/src/_typography.css
+++ b/wp-content/themes/point-church/css/src/_typography.css
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, h5, p, blockquote, li, dt, dd, span, a {
+  font-family: 'myriad-pro';
+}
+
 .blog {
   max-width: 800px;
   margin: 0 auto;
