--- a/wp-content/themes/point-church/css/src/components/_section.css
+++ b/wp-content/themes/point-church/css/src/components/_section.css
@@ -1,5 +1,34 @@
 .section {
-  padding: 2em;
+  padding: 4em 2em;
+
+  .section__header {
+    text-align: center;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 2em;
+    margin-bottom: 1em;
+  }
+
+  .section__header-desc {
+    font-size: 1.6em;
+    text-align: center;
+    color: #00a0c6;
+    margin-bottom: 2em;
+    margin-top: -.5em;
+    font-weight: 400;
+  }
+
+  &.photo {
+    &::before {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      background: rgba(0, 0, 0, .25);
+    }
+  }
 
   + .section {
     border-top: 1px solid #ccc;
