--- a/wp-content/themes/point-church/css/src/main.css
+++ b/wp-content/themes/point-church/css/src/main.css
@@ -6,6 +6,8 @@
 
 /* components */
 
-@import 'components/header';
-@import 'components/footer';
-@import 'components/section';
+@import 'components/main';
+
+/* layouts */
+
+@import 'layouts/main';
