dynamically setting bg images on sections via JS + data attribute

--- a/wp-content/themes/point-church/css/src/components/_button.css
+++ b/wp-content/themes/point-church/css/src/components/_button.css
@@ -13,4 +13,10 @@
   clear: both;
   font-size: 1.2em;
   transition: all .5s;
+
+  &--white {
+    border-color: #fff;
+    color: #fff;
+    @extend .button;
+  }
 }
