--- a/wp-content/themes/point-church/css/src/components/_section.css
+++ b/wp-content/themes/point-church/css/src/components/_section.css
@@ -19,18 +19,48 @@
   }
 
   &.photo {
+    position: relative;
+    background-size: cover;
+    color: #fff;
+
     &::before {
+      content: '';
       height: 100%;
       width: 100%;
       position: absolute;
       top: 0;
       left: 0;
       display: block;
-      background: rgba(0, 0, 0, .25);
+      background: rgba(0, 0, 0, .5);
+    }
+
+    .section__header-desc {
+      color: #ccc;
+    }
+
+    .wrapper {
+      position: relative;
     }
   }
 
   + .section {
     border-top: 1px solid #ccc;
   }
+}
+
+@media screen and (min-width: 800px) {
+
+  .section {
+
+    .section__header {
+      font-size: 3.4em;
+    }
+
+    .section__header-desc {
+      font-size: 2em;
+      margin-top: -1em;
+    }
+
+  }
+
 }
