--- a/wp-content/themes/point-church/css/src/layouts/_body.css
+++ b/wp-content/themes/point-church/css/src/layouts/_body.css
@@ -2,6 +2,11 @@ body {
   margin-top: 77px;
 }
 
+.wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 @mixin breakpoint900 {
   body {
     margin-top: 0;
