--- a/wp-content/themes/point-church/css/src/components/_footer.css
+++ b/wp-content/themes/point-church/css/src/components/_footer.css
@@ -1,78 +1,92 @@
 footer {
+  text-align: center;
   background: #333;
-  padding: 2em;
-  color: #999;
   font-weight: 100;
+  color: #999;
+  padding: 2em;
   clear: both;
-  @include clearfix;
+  @mixin clearfix;
 
-  .footer-title {
-    background: url(../images/footer-logo.png) no-repeat 0 0;
+  .footer__title {
+    background: url(../../images/footer-logo.png) no-repeat 0 0;
     text-indent: -9999em;
     height: 66px;
     width: 150px;
+    margin: 0 auto 2em;
   }
 
-  .footer-address {
-    margin-top: 2em;
-    line-height: 1.4em;
-    font-size: 1.2em;
-    font-weight: 100;
+  .footer__address {
+    border-bottom: 1px solid #999;
+    margin-bottom: 1em;
+    padding-bottom: 1em;
   }
 
-  .footer-utilities {
-    clear: both;
-    border-top: 1px solid #999;
-    margin-top: 1em;
-    padding-top: 1em;
+  .buttons {
+    [class*="button"] {
+      display: block;
+      margin: 1em 2%;
+      padding: .5em 1em;
+      width: auto;
+    }
+  }
 
-    .button {
-      width: 15%;
-      border: 1px solid #999;
-      padding: 1%;
-      text-align: center;
-      text-decoration: none;
-      color: #999;
-      transition: all .5s;
+  .copyright {
+    margin: 0;
+  }
+}
 
-      &:hover {
-        background: #444;
+@media screen and (min-width: 500px) {
+  footer {
+    .buttons {
+      [class*="button"] {
+        display: inline-block;
+        width: 40%;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 800px) {
+  footer {
+    background: #333;
+    padding: 2em;
+    color: #999;
+    text-align: left;
+
+    .footer__title {
+      margin: 0;
+    }
+
+    .footer__address {
+      margin-top: 2em;
+      line-height: 1.4em;
+      font-size: 1.2em;
+      font-weight: 100;
+    }
+
+    .buttons {
+      float: right;
+      width: 60%;
+      margin: 0;
+      text-align: right;
+
+      [class*="button"] {
+        margin: 0 0 0 1em;
+        text-align: center;
+        width: auto;
+
+        &:hover {
+          background: #444;
+        }
       }
     }
 
     .copyright {
       float: left;
-      text-align: center;
-      width: 64%;
+      width: 40%;
       padding-top: 1%;
 
       a { color: #ccc; }
-    }
-  }
-}
-
-@media screen and (max-width: 820px) {
-  footer {
-    text-align: center;
-
-    .footer-title {
-      margin: 0 auto;
-    }
-
-    .footer-utilities {
-      .button {
-        float: none !important;
-        display: block;
-        width: 80%;
-        padding: .5em;
-        margin: 1em auto;
-      }
-
-      .copyright {
-        float: none;
-        width: 80%;
-        margin: 0 auto;
-      }
     }
   }
 }
