--- a/wp-content/themes/point-church/css/src/_utilities.css
+++ b/wp-content/themes/point-church/css/src/_utilities.css
@@ -5,3 +5,10 @@
 .u-float-right {
   float: right;
 }
+
+.u-align-left { text-align: left; }
+.u-align-right { text-align: right; }
+
+.u-clear-left { clear: left; }
+.u-clear-right { clear: right; }
+.u-clear-both { clear: both; }
