--- a/wp-content/themes/point-church/css/src/components/_section.css
+++ b/wp-content/themes/point-church/css/src/components/_section.css
@@ -1,5 +1,6 @@
 .section {
   padding: 4em 2em;
+  box-sizing: border-box;
 
   .section__header {
     text-align: center;
@@ -24,6 +25,10 @@
     max-width: 100%;
   }
 
+  &.full-bleed {
+    height: 100vh;
+  }
+
   &.photo {
     position: relative;
     background-size: cover;
@@ -38,6 +43,10 @@
       left: 0;
       display: block;
       background: rgba(0, 0, 0, .5);
+    }
+
+    .section__header {
+      color: #fff;
     }
 
     .section__header-desc {
@@ -56,7 +65,7 @@
 
 @media screen and (min-width: 800px) {
   .section {
-    padding: 8em 0;
+    padding: 6em 0;
     text-align: center;
 
     .section__header {
@@ -66,6 +75,11 @@
     .section__header-desc {
       font-size: 2em;
       margin-top: -1em;
+    }
+
+    &.full-bleed {
+      height: calc(100vh - 77px);
+      padding: 25vh 2em;
     }
   }
 }
