--- a/wp-content/themes/point-church/css/src/components/_badge.css
+++ b/wp-content/themes/point-church/css/src/components/_badge.css
@@ -17,14 +17,18 @@
     margin-bottom: .5em;
     opacity: .75;
     transition: opacity .5s;
+    border: 1px solid #eee;
   }
 
   .badge__title {
     font-size: 1.6em;
+    margin-bottom: .5em;
   }
 
   .badge__desc {
-    margin-top: .25em;
+    margin: .25em 0 0;
+    font-size: 1.1em;
+    font-weight: 100;
   }
 
   + .badge {
